# doomgeneric

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  build-wasm.sh  build.sh  doom1.wad.txt  host-compile.sh  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
docs/: build.md  compatibility.md  executables.md  wad.md
docs/architecture/: upstream-sync.md
doomgeneric/: .gitignore  CMakeLists.txt  Makefile  Makefile.dr  Makefile.mingw  Makefile.mips  Makefile.mt7628  d_loop.c  d_main.c  doomdef.h  doomgeneric_dr.c  doomgeneric_mt7628.c  doomgeneric_sdl.c  doomgeneric_wah.c  doomreplay.h  doomtype.h  dr_font.h  g_game.c  host_io.h  host_io_globals.c  i_input.c  i_main.c  i_video.c  m_config.c  m_config.h  m_menu.c  m_misc.c  m_misc.h  p_enemy.c  p_mobj.c  r_segs.c  statdump.c  w_wad.c  wasm-compile.sh
doomgeneric/.savegame/: doomsav0.dsg  doomsav1.dsg  doomsav2.dsg  doomsav3.dsg
host/: main.c  wah.h
hsq/: hsq.cpp
input/: nightmare.txt  sample0.txt  sample1.txt  sample2.txt  solve1.txt  sr40.txt  sr50.txt  turn.txt
